feat: add task 6 - add Pagination and Sorting